--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Vinicius Barretto Mello" />
+    <meta name="keywords" content="webapp, baby weight tracker, baby weight" />
+    <meta
+      name="description"
+      content="Webapp to register and daily weight tracker baby weight"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
