--- a/index.html
+++ b/index.html
@@ -28,32 +28,30 @@
         <div class="header__form">
           <form class="form-weight">
             <fieldset class="form-weight__fieldset">
-              <label for="" class="form-weight__label-date"
+              <label for="date" class="form-weight__label-date"
                 ><input
                   type="date"
                   id="form-weight__date"
                   name="date"
-                  class="form-weight__input form-weight__date"
+                  class="form-weight__inputs form-weight__date"
               /></label>
-              <label
-                for="form-weight__input form-weight__pounds"
-                class="form-weight__label-pounds"
+              <label for="pounds" class="form-weight__label-pounds"
                 ><input
                   type="number"
                   name="pounds"
                   id="form-weight__pounds"
-                  class="form-weight__input form-weight__pounds"
+                  class="form-weight__inputs form-weight__pounds"
                   placeholder="---"
                 /><span class="form-weight__pounds-abbreviation"
                   >lbs</span
                 ></label
               >
-              <label for="" class="form-weight__label"
+              <label for="ounces" class="form-weight__label"
                 ><input
                   type="number"
                   name="ounces"
                   id="form-weight__ounces"
-                  class="form-weight__input form-weight__ounces"
+                  class="form-weight__inputs form-weight__ounces"
                   placeholder="---"
                 /><span class="form-weight__ounces-abbreviation"
                   >oz</span
