--- a/index.html
+++ b/index.html
@@ -103,14 +103,19 @@
                   class="slide-bar__infographic"
                   min="-10"
                   max="0"
-                  value="0.8"
+                  value="-7"
+                  disabled
                 />
-                <div class="slide-bar__percentages">
-                  <p class="slide-bar__minus-ten">-10%</p>
-                  <p class="slide-bar__minus-seven">-7%</p>
-                  <p class="slide-bar__zero">0%</p>
+                <div class="slide-bar__legend">
+                  <p class="slide-bar__legend-value slide-bar__minus-ten">
+                    -10%
+                  </p>
+                  <p class="slide-bar__legend-value slide-bar__minus-seven">
+                    -7%
+                  </p>
+                  <p class="slide-bar__legend-value slide-bar__zero">0%</p>
                 </div>
-                <p class="weight-info__percentage-status">normal</p>
+                <p class="slide-bar__status">normal</p>
               </div>
             </div>
           </div>
