--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
             <div class="weight-info__column-name">
               <h2 class="weight-info__name">Jack Leo Harper</h2>
               <button type="button" class="weight-info__btn">
-                <img src="./images/edit-btn.svg" alt="" />
+                <img
+                  src="./images/edit-btn.svg"
+                  class="weight-info__btn-icon"
+                  alt=""
+                />
               </button>
             </div>
             <ul class="weight-info__column-dates">
@@ -124,19 +128,19 @@
           <h2 class="daily-tracker__title">Daily Weight Tracker</h2>
           <table class="track-table">
             <tr class="track-table__headers">
-              <th class="track-table__header-item">Date</th>
               <th class="track-table__header-item">Days</th>
+              <th class="track-table__header-item">Date</th>
               <th class="track-table__header-item">lb + oz</th>
               <th class="track-table__header-item">kg</th>
               <th class="track-table__header-item">Change</th>
             </tr>
             <tr class="track-table__rows">
+              <td class="track-table__row-item">30</td>
               <td class="track-table__row-item">
                 <button class="track-table__btn">10/13/2024</button>
               </td>
-              <td class="track-table__row-item">0</td>
-              <td class="track-table__row-item">7 lbs 5 oz</td>
-              <td class="track-table__row-item">3.317 kg</td>
+              <td class="track-table__row-item">7lbs 5.00oz</td>
+              <td class="track-table__row-item">3.317kg</td>
               <td class="track-table__row-item">0%</td>
             </tr>
           </table>
