add weight form to screen 320px

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             New Weight
           </button>
         </nav>
-        <div class="header__form header__form_closed">
+        <div class="header__form">
           <form class="form-weight">
             <fieldset class="form-weight__fieldset">
               <label for="date" class="form-weight__label-date"
@@ -46,7 +46,7 @@
                   >lbs</span
                 ></label
               >
-              <label for="ounces" class="form-weight__label"
+              <label for="ounces" class="form-weight__label-ounces"
                 ><input
                   type="number"
                   name="ounces"
@@ -145,8 +145,13 @@
             </tr>
           </table>
         </section>
+        <button class="float-btn">
+          <img src="./images/icon_add.svg" alt="" class="float-btn__add-icon" />
+        </button>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <p class="footer__copyright">&#169; 2024 - Vinicius B. Mello</p>
+      </footer>
     </div>
   </body>
 </html>
