--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   id="form-weight__date"
                   name="date"
                   class="form-weight__inputs form-weight__date"
-              /></label>
+              /><span><img src="./images/calendar-regular.svg" alt="" class="form-weight__calendar-icon"></span></label>
               <label for="pounds" class="form-weight__label-pounds"
                 ><input
                   type="number"
