add function to accept only lbs, change status and float button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                   type="date"
                   id="date"
                   class="form-weight__inputs form-weight__date"
-                  value="2024-10-15" /><span
+                  value="2024-10-15"
+                  required /><span
                   ><img
                     src="./images/calendar-regular.svg"
                     alt=""
@@ -45,6 +46,7 @@
                   id="pounds"
                   class="form-weight__inputs form-weight__pounds"
                   placeholder="---"
+                  required
                 /><span class="form-weight__pounds-abbreviation"
                   >lbs</span
                 ></label
