rename toggle button

--- a/index.html
+++ b/index.html
@@ -140,8 +140,12 @@
             </tr>
           </table>
         </section>
-        <button class="float-btn">
-          <img src="./images/icon_add.svg" alt="" class="float-btn__add-icon" />
+        <button class="toggle-btn">
+          <img
+            src="./images/icon_add.svg"
+            alt=""
+            class="toggle-btn__add-icon"
+          />
         </button>
       </main>
       <footer class="footer">
