add function to edit and display the changes

--- a/index.html
+++ b/index.html
@@ -68,14 +68,17 @@
       </header>
       <main class="content">
         <div class="content__background"></div>
+        <div class="alert">
+          <p class="alert__text"></p>
+        </div>
         <section class="weight-info">
           <div class="weight-info__header">
             <div class="weight-info__column-name">
               <h2 class="weight-info__name">XXXXXXXXX</h2>
-              <button type="button" class="weight-info__btn">
+              <button type="button" class="weight-info__edit-btn">
                 <img
                   src="./images/edit-btn.svg"
-                  class="weight-info__btn-icon"
+                  class="weight-info__edit-icon"
                   alt=""
                 />
               </button>
