add chart function to added new data

--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@
               >Weight Change
             </p>
             <p class="chart__legend">
-              <span class="chart__square chart__square_warning"></span>Warning
+              <span class="chart__square chart__square_warning"></span>-7%
+              Warning
             </p>
             <p class="chart__legend">
               <span
                 class="chart__square chart__square chart__square_dangerous"
               ></span
-              >Dangerous
+              >-10% Dangerous
             </p>
           </div>
         </section>
