add register function and fix bug edit

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <div class="alert">
           <p class="alert__text"></p>
         </div>
+        <section class="register"></section>
         <section class="weight-info">
           <div class="weight-info__header">
             <div class="weight-info__column-name">
@@ -180,5 +181,6 @@
     </div>
     <script src="./index.js" charset="UTF-8"></script>
     <script src="./chart.js" charset="UTF-8"></script>
+    <script src="./register.js" charset="UTF-8"></script>
   </body>
 </html>
